--- a/sdg.html
+++ b/sdg.html
@@ -9,10 +9,11 @@
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="./styles/homepage.css">
-  <link rel="stylesheet" href="./styles/navbar.css">
-  <link rel="stylesheet" href="./styles/global.css">
   <link rel="stylesheet" href="./assets/css/sdg.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/homepage.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
+  
 
 </head>
 <body>
@@ -40,7 +41,7 @@
 </div>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark " data-aos="fade-down" data-aos-duration="1000"style="position: sticky; top: 0; z-index: 999;">
-  <div class="container-fluid justify-content-center">
+<div class="container d-flex justify-content-between align-items-center">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -49,7 +50,7 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav text-center">
         <li class="nav-item">
-          <a class="nav-link text-white active" href="./Homepage.html#sdgs">Home</a>
+          <a class="nav-link text-white active" href="Homepage.html">Home</a>
         </li>
             <li class="nav-item dropdown dropdown-hover">
             <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button">
@@ -61,12 +62,12 @@
                 <li><a class="dropdown-item text-dark" href="KSA.html">Knowledge Sharing</a></li>
             </ul>
             </li>
-            <li class="nav-item"><a class="nav-link text-white" href="./Tech1.html">Technologies</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="./Homepage.html#media-resources">Media Resources</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="./Homepage.html#research">Research</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="./Homepage.html#sdgs">SDGs</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="./Homepage.html#about">About</a></li>
-            <li class="nav-item"><a class="nav-link text-white active" href="./Homepage.html#about">Contact</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="tech.html">Technologies</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#media-resources">Media Resources</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#research">Research</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#sdgs">SDGs</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Homepage.html#about">About</a></li>
+            <li class="nav-item"><a class="nav-link text-white active" href="Homepage.html#about">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -412,7 +413,7 @@
   </div>
 </footer>
 
-</body>
+
 
 <script>
   const sections = document.querySelectorAll(".content-section");
@@ -442,5 +443,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 <script src="./assets/js/navbar.js"></script>
-
+</body>
 </html>
